--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "fastapi[standard]>=0.115.11",
     "fpdf2>=2.8.2",
     "geoalchemy2>=0.17.1",
+    "mkdocs-material>=9.7.0",
     "psycopg[binary]>=3.2.5",
 ]
 
