--- a/env.example
+++ b/env.example
@@ -2,11 +2,10 @@ DOMAIN="localhost"
 FRONTEND_HOST="http://localhost:5173"
 
 # Database Settings
-POSTGRES_SERVER="localhost"
-POSTGRES_PORT=5432
+DB_NAME="localhost"
 POSTGRES_PASSWORD="DB_PASSWORD"
-POSTGRES_DB="mobilitaetscheckdb"
-POSTGRES_USER="mobilitaetscheck"
+DB_HOSTNAME="mobilitaetscheckdb"
+DB_USERNAME="mobilitaetscheck"
 
 ENVIRONMENT="production"
 
